# soccer-highlights

./: GITHUB_SETUP.md  QUICK_GITHUB_PUSH.md  README.md  app.py  create_github_repo.py  github_requirements.txt  install_dependencies.py  push_to_github.py  pyproject.toml  replit.md  run_app.py  setup_github_repo.md  video_overlay_fix.py
devcontainer/: devcontainer.json  setup.sh
streamlit/: config.toml
