[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.39",
    "moviepy>=2.2.1",
    "openai>=1.88.0",
    "pandas>=2.3.0",
    "pydub>=0.25.1",
    "speechrecognition>=3.14.3",
    "streamlit>=1.46.0",
]
